# interlens

./: .gitignore  .license-header.txt  .licenserc.yaml  .pre-commit-config.yaml  AGENTS.md  README.md  mkdocs.yml  pyproject.toml  vercel.ts
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: gen_llms_txt.py  gen_ref_pages.py  index.md
docs/examples/: 01_quickstart.md  02_conversations.md  03_participants_and_models.md  04_context_and_serialization.md  05_tools.md  06_hooks.md  07_interp.md  08_rollouts_and_scale.md  09_advanced_interp_pipelines.md  10_arena.md  11_negotiation.md  README.md
examples/: README.md  arena_direct_piping.py  arena_negotiation_quickstart.py  arena_relay_messaging.py  gsm8k_benchmark_rollout.py  run_gsm8k_example.sbatch
scripts/: gen_llms_txt.py  gen_ref_pages.py
scripts/docs/: build.py  generate_llms.py  generate_reference.py
src/interlens/: __init__.py  context_item.py  conversation.py  execution_mode.py  factories.py  factories.pyi  functional.py  message.py  parsing.py  reasoning_visibility.py  template.py  templating.py  transcript.py  usage.py  view.py
src/interlens/arena/: __init__.py  actions.py  engine.py  gates.py  oracles.py  ratchet.py  replay.py  scenario.py  schema.py  views.py
src/interlens/arena/inspect/: __init__.py  adapter.py  tasks.py
src/interlens/arena/negotiation/: __init__.py  _oracle_common.py  acceptance.py  beliefs.py  bestresponse.py  equilibrium.py  games.py  generate.py  references.py  sheets.py  solutions.py  space.py  strategies.py
src/interlens/arena/scenarios/: __init__.py  coding.py  longcontext.py  negotiation.py  priors.py  relay.py  scorable.py  scorable_prompts.py  security.py
src/interlens/arena/scenarios/dlc/: __init__.py  bcp.py  build.py  codeqa.py  oolong_pairs.py  sniah.py
src/interlens/communication/: __init__.py  messaging.py  policy.py
src/interlens/context/: __init__.py  context_policy.py  drop_oldest_policy.py  error_policy.py  sliding_window_policy.py  summarize_policy.py
src/interlens/hooks/: __init__.py  message_hook.py
src/interlens/interp/: __init__.py  activation_cache.py  bridge.py  capture.py  grad.py  layers.py  logprobs.py  patching.py  routing.py  steering.py
src/interlens/loading/: __init__.py  load.py  model_cache.py  registry.py
src/interlens/participant/: __init__.py  participant.py  role.py  serialize.py
src/interlens/participant/config/: __init__.py  api_participant_config.py  model_participant_config.py  participant_config.py
src/interlens/participant/participants/: __init__.py  api_client.py  api_participant.py  gemma.py  llama.py  model_participant.py  policy_participant.py  qwen.py  scripted_participant.py
src/interlens/runner/: __init__.py  analyzer_registry.py  batched.py  devices.py  pool.py  rollout.py  spec.py  worker_init.py
src/interlens/stop/: __init__.py  conditions.py  stop_condition.py
src/interlens/tools/: __init__.py  registry.py  tool.py  tool_call.py
tests/: __init__.py  api_validate.py  cluster_validate.py  cluster_validate.sbatch  conftest.py  install_flash_attn.sbatch  profile_pipeline.py  profile_pipeline.sbatch  test_arena_actions.py  test_arena_coding.py  test_arena_engine.py  test_arena_inspect.py  test_arena_inspect_v2.py  test_arena_longcontext.py  test_arena_oracles.py  test_arena_ratchet.py  test_arena_scenarios.py  test_arena_scorable.py  test_arena_security.py  test_communication.py  test_conversation.py  test_family_flags.py  test_grad.py  test_hooks.py  test_interp.py  test_model_cache.py  test_models_slow.py  test_negotiation_games.py  test_negotiation_generate.py  test_negotiation_oracles.py  test_negotiation_solutions.py  test_negotiation_space.py  test_parsing.py  test_reasoning_persistence.py  test_runner.py  test_scripted_participant.py  test_serialization.py  test_stop_conditions.py  test_tools.py  test_usage.py  (+1 more)
