[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "interlens"
dynamic = ["version"]   # version is derived from the latest git tag (hatch-vcs); CI tags each push to main
description = "A framework for efficiently scaffolding and interpreting multi-agent conversations (activation capture, steering, patching)."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Siddharth M. Bhatia" }]
keywords = ["llm", "interpretability", "multi-agent", "transformers", "activation-steering"]

# torch is intentionally an unpinned, build-agnostic dependency: the right wheel depends on the consumer's
# CUDA/CPU/MPS platform, so let them choose it (see the CUDA note in the README) rather than pinning a
# machine-specific index here. transformers is minor-locked (it breaks across minors).
dependencies = [
    "torch",
    "transformers>=4.57,<5",
]

[project.optional-dependencies]
api = ["anthropic>=0.112,<1", "openai>=1.40"]   # APIParticipant: anthropic (Claude) and/or openai SDK (OpenRouter)
dev = ["pytest>=9"]
# Docs site: MkDocs Material + mkdocstrings (API reference straight from docstrings) + auto-discovery
# (gen-files/literate-nav) + llms.txt generation. Build with `mkdocs serve` / `mkdocs build` from this dir.
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
    "mkdocs-llmstxt>=0.2",
    "black>=24",   # mkdocstrings uses it to pretty-format rendered signatures
]

[project.urls]
Homepage = "https://github.com/Sid-MB/interlens"
Repository = "https://github.com/Sid-MB/interlens"

[tool.hatch.version]
source = "vcs"   # version = latest `vX.Y.Z` git tag (+ dev suffix for untagged working trees)

[tool.hatch.build.targets.wheel]
packages = ["src/interlens"]

[tool.pytest.ini_options]
# `src` first so `import interlens` resolves to the working tree (no install needed for dev); `.` so the
# top-level `tests` package is importable (e.g. `python -m tests.profile_pipeline`).
pythonpath = ["src", "."]
markers = ["slow: needs model weights / a GPU; deselected by default (run with -m slow)"]
addopts = "-m 'not slow'"
