# interlens: a framework for scaffolding and interpreting multi-agent conversations
# Copyright (C) 2026 Siddharth M. Bhatia
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of version 3 of the GNU Affero General Public License
# as published by the Free Software Foundation.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "interlens"
dynamic = ["version"]   # version is derived from the latest git tag (hatch-vcs); CI tags each push to main
description = "A framework for efficiently scaffolding and interpreting multi-agent conversations (activation capture, steering, patching)."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Siddharth M. Bhatia" }]
keywords = ["llm", "interpretability", "multi-agent", "transformers", "activation-steering"]

# torch is intentionally an unpinned, build-agnostic dependency: the right wheel depends on the consumer's
# CUDA/CPU/MPS platform, so let them choose it (see the CUDA note in the README) rather than pinning a
# machine-specific index here. transformers is minor-locked (it breaks across minors).
dependencies = [
    "torch",
    "transformers>=4.57,<5",
]

[project.optional-dependencies]
api = ["anthropic>=0.112,<1", "openai>=1.40"]   # APIParticipant: anthropic (Claude) and/or openai SDK (OpenRouter)
inspect = [
    "inspect-ai>=0.3.248",
]

# Dev tooling (PEP 735 group — uv installs `dev` by default on `uv sync`, so every contributor gets
# pytest + pre-commit without asking; activate the git hook once with `uv run pre-commit install`).
[dependency-groups]
dev = [
    "pytest>=9",
    "pre-commit>=4",   # license-header insertion (.pre-commit-config.yaml)
]

# Docs site: Zensical (successor to MkDocs Material — reads mkdocs.yml natively) + mkdocstrings (API
# reference straight from docstrings, rendered by Zensical's native mkdocstrings module). A group rather
# than an extra because building the docs never imports interlens — mkdocstrings/griffe reads src/
# statically — so CI installs just this group (`pip install --group docs`), no package, no torch.
# Build: `python scripts/gen_ref_pages.py && zensical build --clean`
# Serve: `python scripts/gen_ref_pages.py && zensical serve`
docs = [
    "zensical>=0.0.50",
    "mkdocstrings[python]>=0.27",
    "black>=24",   # mkdocstrings uses it to pretty-format rendered signatures
]

[project.urls]
Homepage = "https://github.com/Sid-MB/interlens"
Repository = "https://github.com/Sid-MB/interlens"

[tool.hatch.version]
source = "vcs"   # version = latest `vX.Y.Z` git tag (+ dev suffix for untagged working trees)

[tool.hatch.build.targets.wheel]
packages = ["src/interlens"]

# Keep the published sdist to what's needed to build + audit the package: src plus the auto-included
# pyproject.toml/README/LICENSE/PKG-INFO. Without this, hatchling's default sweeps in everything that
# isn't gitignored — docs, tests, CI workflows, uv.lock, even local build caches — none of which a
# client installing the package needs.
[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.pytest.ini_options]
# `src` first so `import interlens` resolves to the working tree (no install needed for dev); `.` so the
# top-level `tests` package is importable (e.g. `python -m tests.profile_pipeline`).
pythonpath = ["src", "."]
markers = ["slow: needs model weights / a GPU; deselected by default (run with -m slow)"]
addopts = "-m 'not slow'"
